--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ h6{
 
 .card{
   width: 250px;
+  height: fit-content;
   margin-bottom: 1rem;
 }
 
@@ -48,4 +49,51 @@ ul.list-group {
   height: 4rem;
   width: auto;
   margin-bottom: 1.0rem;
+}
+
+.dropover{
+  background-color: rgba(0,0,0,0.3);
+}
+
+.dropover-active{
+  background-color: rgba(0,0,0,0.9);
+}
+
+.bottom-trash{
+  opacity: 0;
+  color: #f1f1f1;
+  font-size: 2.3rem;
+  font-family: var(--secondary-font);
+  transform: translateY(150px);
+  transition: all .5s ease-in-out;
+  background-color: rgba(234,0,39,0.7);
+}
+
+.bottom-trash-drag{
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.bottom-trash-active{
+  background-color: rgba(234,0,39,1);
+}
+
+.btn-add, .btn-save{
+  background-color: #FA8BFF;
+  background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+  transition: all .5s ease-out;
+  background-size: 1px 100px;
+  background-position: 0 -10px;
+}
+
+.btn-close, .btn-delete{
+  background-color: #EA0028;
+  background-image: linear-gradient(180deg, #FF9A8B 0%, #EA0028 100%);
+  transition: all .5s ease-out;
+  background-size: 1px 100px;
+  background-position: 0 -10px;
+}
+
+:where(.btn-add, .btn-save, .btn-close, .btn-delete):hover{
+  background-position: 1px -50px;
 }
